5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1764_1183.log
== TEST (2019-05-23 21:13:04) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
x = 0
z = 0
vp = zeros(len(z))

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
while(x < z):
	if(vz[i] >=0):
	vp[i] = vz[i]
print(vp)		
-- ERROR:
File "XXXX", line 14
    vp[i] = vz[i]
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:13:20) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
x = 0
z = 0
vp = zeros(len(z))

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
while(x < z):
	if(vz[i] >=0):
		vp[i] = vz[i]
print(vp)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:14:33) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
x = 0
z = 0
vp = zeros(z)

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
while(x < z):
	if(vz[i] >=0):
		vp[i] = vz[i]
print(vp)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:15:46) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
x = 0
z = 0
vp = zeros(z)

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
while(x < z):
	if(vz[i] >=0):
		vp[i] = vz[i]
print(z)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:26:01) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
x = 0
z = 0
#vp = zeros(z)

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
print(i)
print(x)
print(z)
	#while(x < z):
#	if(vz[i] >=0):
#		vp[i] = vz[i]
#print(z)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:27:09) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
#x = 0
z = 0
#vp = zeros(z)

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
print(i)
print(x)
print(z)
	#while(x < z):
#	if(vz[i] >=0):
#		vp[i] = vz[i]
#print(z)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:27:32) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
#x = 0
z = 0
#vp = zeros(z)

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
print(i)
#print(x)
print(z)
	#while(x < z):
#	if(vz[i] >=0):
#		vp[i] = vz[i]
#print(z)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:31:13) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 0
vp = zeros(z)
print(z)
print(vp)
#while(x < z):
#	if(vz[i] >=0):
#		vp[i] = vz[i]
#print(z)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:32:24) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 0
vp = zeros(z)
while(x < z):
	if(vz[i] >=0):
		vp[i] = vz[i]
	x = x+1
print(z)
print(vp)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:36:30) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 0
vp = zeros(z)
while(x < z-1):
	if(vz[i] >=0):
		vp[i] = vz[i]
	x = x+1
print(z)
print(vp)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:38:21) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = str(z)
x = 0
vp = zeros(z)
while(x < len(z)):
	if(vz[i] >=0):
		vp[i] = vz[i]
	x = x+1
print(z)
print(vp)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:38:56) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = str(z)
x = 0
vp = zeros(len(z))
while(x < len(z)):
	if(vz[i] >=0):
		vp[i] = vz[i]
	x = x+1
print(z)
print(vp)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:39:47) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = str(z)
x = 0
vp = zeros(len(z))
while(x < len(z)):
	if(vz[i] >= 0):
		vz[i] = vp[i]
	x = x+1
print(z)
print(vp)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:40:33) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = str(z)
x = 0
vp = zeros(len(z))
#while(x < len(z)):
#	if(vz[i] >= 0):
#		vz[i] = vp[i]
#	x = x+1
print(z)
print(vp)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:41:13) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 0
vp = zeros(z)
#while(x < len(z)):
#	if(vz[i] >= 0):
#		vz[i] = vp[i]
#	x = x+1
print(z)
print(vp)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:41:26) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 0
vp = zeros(z)
#while(x < len(z)):
#	if(vz[i] >= 0):
#		vz[i] = vp[i]
#	x = x+1
print(z)
print(vp)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:42:56) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 1
vp = zeros(z)
while(x < z):
	if(vz[i] >= 0):
		vz[i] = vp[i]
	x = x+1
print(z)
print(vp)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:50:00) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 0
vp = zeros(z)

#while(x < z):
#	if(vz[i] >= 0):
#		vp[i] = vz[i]
#	x = x+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:52:43) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 0
vp = zeros(z)

while(x < vz):
	if(vz[i] >= 0):
		vp[i] = vz[i]
	x = x+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:53:40) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 0
vz = vz
vp = zeros(z)
while(x < vz):
	if(vz[i] >= 0):
		vp[i] = vz[i]
	x = x+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:54:18) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
x = 0
vz = vz
vp = zeros(z)
while(x < len(vz)):
	if(vz[i] >= 0):
		vp[i] = vz[i]
	x = x+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:55:32) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz
vp = zeros(z)
while(i < len(vz)):
	if(vz[i] >= 0):
		vp[i] = vz[i]
	i = i+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:55:56) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz
vp = zeros(z)
while(i < len(vz)):
	if(vz[i] >= 0):
		vp[i] = vz[i]
	i = i+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:57:59) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz

while(i < len(vz)):
	if(vz[i] >= 0):
		vp = zeros(z)
		vp[i] = vz[i]
	i = i+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:58:08) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz

while(i < len(vz)):
	if(vz[i] >= 0):
		vp = zeros(z)
		vp[i] = vz[i]
	i = i+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:59:16) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz

while(i < len(vz)):
	if(vz[i] >= 0):
		vp = zeros(z)
		vz[i] = vp[i]
	i = i+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:59:53) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz

while(i < len(vz)):
	if(vz[i] >= 0):
		vp = zeros(z)
		vp[i] = vz[i]
	i = i+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:59:59) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz

while(i < len(vz)):
	if(vz[i] >= 0):
		vp = zeros(z)
		vp[i] = vz[i]
	i = i+1
print(z)
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 08:53:34) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz
vp = 0
while(i < len(vz)):
	if(vz[i] >= 0):
		vp = vp + vz[i]
	i = i+1
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 08:53:50) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz
vp = 0
while(i < len(vz)):
	if(vz[i] >= 0):
		vp = vp + vz[i]
	i = i+1
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 08:54:56) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz
vp = vz
while(i < len(vz)):
	if(vz[i] >= 0):
		vp = vz[i]
	i = i+1
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 08:55:46) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz

while(i < len(vz)):
	if(vz[i] >= 0):
		vp = vz[i]
	i = i+1
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:00:47) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz

while(i < len(vz)):
	if(vz[i] >= 0):
		vp = str(vz[i])
		vs = vp + str(vz[i])
	i = i+1
print(vp)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:01:05) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0

while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	

z = z
i = 0
vz = vz

while(i < len(vz)):
	if(vz[i] >= 0):
		vp = str(vz[i])
		vs = vp + str(vz[i])
	i = i+1
print(vs)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:23:49) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
vz = vz #vetor inicial de entrada
pe = 0 #contador de posicao do vetor de entrada
ps = 0 #contador de posicao do vetor de saida
vs = []
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs.append(vz[pe])
	i = i+1
print(vs)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:24:11) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
vz = vz #vetor inicial de entrada
pe = 0 #contador de posicao do vetor de entrada
ps = 0 #contador de posicao do vetor de saida
vs = []
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs.append(vz[pe])
	pe = pe+1
print(vs)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:24:23) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
vz = vz #vetor inicial de entrada
pe = 0 #contador de posicao do vetor de entrada
ps = 0 #contador de posicao do vetor de saida
vs = []
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs.append(vz[pe])
	pe = pe+1
print(vs)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:24:34) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
vz = vz #vetor inicial de entrada
pe = 0 #contador de posicao do vetor de entrada
ps = 0 #contador de posicao do vetor de saida
vs = []
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs.append(vz[pe])
	pe = pe+1
print(vs)
print(vz)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:25:07) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
vz = vz #vetor inicial de entrada
pe = 0 #contador de posicao do vetor de entrada
ps = 0 #contador de posicao do vetor de saida
vs = []
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs.append(vz[pe])
	pe = pe+1
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:25:33) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
vz = vz #vetor inicial de entrada
pe = 0 #contador de posicao do vetor de entrada
ps = 0 #contador de posicao do vetor de saida
vs = []
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs.append(vz[pe])
	pe = pe+1
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 09:25:55) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
vz = vz #vetor inicial de entrada
pe = 0 #contador de posicao do vetor de entrada
ps = 0 #contador de posicao do vetor de saida
vs = []
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs.append(vz[pe])
	pe = pe+1
print(vs)
	
-- EXECUTION TIME:
0.467389
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2, 3, 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18, 32, 14, 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 09:26:51) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
vs = []
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs.append(vz[pe])
	pe = pe+1
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:05:13) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
ps = 0
vs = zeros(z)
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs[ps] = ve[pe]
		pe = pe+1
		ps = ps+1
	else:	
		pe = pe+1
		ps = ps
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:05:54) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
ps = 0
vs = zeros(z)
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs[ps] = vz[pe]
		pe = pe+1
		ps = ps+1
	else:	
		pe = pe+1
		ps = ps
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:06:13) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
ps = 0
vs = zeros(z)
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs[ps] = vz[pe]
		pe = pe+1
		ps = ps+1
	else:	
		pe = pe+1
		ps = ps
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:06:28) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
ps = 0
vs = zeros(z, type=int)
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs[ps] = vz[pe]
		pe = pe+1
		ps = ps+1
	else:	
		pe = pe+1
		ps = ps
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:07:11) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
ps = 0
vs = zeros(z, dtype=int)
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs[ps] = vz[pe]
		pe = pe+1
		ps = ps+1
	else:	
		pe = pe+1
		ps = ps
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:07:20) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
ps = 0
vs = zeros(z, dtype=int)
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs[ps] = vz[pe]
		pe = pe+1
		ps = ps+1
	else:	
		pe = pe+1
		ps = ps
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:07:31) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
ps = 0
vs = zeros(z, dtype=int)
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs[ps] = vz[pe]
		pe = pe+1
		ps = ps+1
	else:	
		pe = pe+1
		ps = ps
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 10:07:45) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
ps = 0
vs = zeros(z, dtype=int)
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs[ps] = vz[pe]
		pe = pe+1
		ps = ps+1
	else:	
		pe = pe+1
		ps = ps
print(vs)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 10:08:07) 
-- CODE:
from numpy import *
vz = array(eval(input("Digite um vetor de numeros inteiros: ")))
i = 0
z = 0
while(i < len(vz)):
	if(vz[i] >=0):
		z = z+1
	i = i+1	
z = z #tamanho do vetor de numeros postiivos
pe = 0 #contador de posicao do vetor de entrada
ps = 0
vs = zeros(z, dtype=int)
while(pe < len(vz)):
	if(vz[pe] >= 0):
		vs[ps] = vz[pe]
		pe = pe+1
		ps = ps+1
	else:	
		pe = pe+1
		ps = ps
print(vs)
	
-- EXECUTION TIME:
0.417925
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
